[tool.poetry]
name = "reveal-secret-message"
version = "1.0.0"
description = "An API to create and reveal encrypted and one time messages"
authors = ["Patrick <pvilchez794@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "reveal_secret_message"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
cryptography = "^39.0.2"
redis = {extras = ["hiredis"], version = "^4.5.1"}
shortuuid = "^1.0.11"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
